bookings logic, slots refactoring
