# src/modules/booking/booking.types.ts
@@ -1,0 +1,12 @@
+export enum BookingStatuses {
+  PENDING = 'pending',
+  CONFIRMED = 'confirmed',
+  CANCELLED = 'cancelled',
+  COMPLETED = 'completed',
+}
+
+export type NewBooking = {
+  userId: string;
+  slotId: string;
+  contractorId: string;
+};
