# src/modules/booking/booking.validation.ts
@@ -1,0 +1,7 @@
+import { z } from 'zod';
+
+export const createBookingSchema = z.object({
+  slotId: z.uuid(),
+});
+
+export type CreateBookingDto = z.infer<typeof createBookingSchema>;
